--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@
 
 .brand {
   font-size: 25px;
+  font-weight: 600;
 }
 
 .Navigation img {
@@ -26,19 +27,19 @@
 .nav-items {
   margin: 0 auto;
   position: relative;
-  left: 55px;
+  left: 100px;
 }
 
 .nav-item {
   color: black !important;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 20px;
   padding: 30px;
 }
 
 .right {
   position: relative;
-  left: 350px;
+  left: 300px;
 }
 
 .shop {
@@ -149,4 +150,95 @@ footer {
 .underlined {
   border-bottom: 2px solid #000;
   padding: 0px 0px 5px 0px !important;
+}
+
+.featured {
+  padding-bottom: 100px;
+}
+
+.featured-card {
+  margin: 0 -180px;
+}
+
+.featured p.heading {
+  font-size: 20px;
+  font-weight: 600;
+  padding-top: 100px;
+  padding-left: 230px;
+}
+
+.featured hr {
+  width: 1450px;
+  height: 2px;
+}
+
+.item-card {
+  width: 450px;
+  padding: 20px 10px;
+  border: 2px #358ac1 solid;
+  border-radius: 20px;
+  overflow: auto;
+}
+
+.item-card img {
+  float: left;
+}
+
+.item-card p span.old {
+  font-size: 12px;
+  color: grey;
+  text-decoration: line-through;
+}
+
+.item-card p.title {
+  font-weight: 600;
+}
+
+.item-card p.price {
+  color: #358ac1;
+  font-weight: 600;
+}
+
+.quantity p span.available {
+  position: relative;
+  left: 70px;
+  color: grey;
+}
+
+.quantity-figure {
+  color: #575353;
+  font-weight: 600;
+}
+
+.quantity p.quantity-text {
+  color: grey;
+}
+
+.progress {
+  height: 13px;
+  width: 220px;
+  border-radius: 10px;
+}
+
+.progress .progress-bar {
+  background-color: #358ac1;
+}
+
+.time-card {
+  height: 55px;
+  margin: 10px -10px 0 -15px;
+  background-color: rgba(233, 233, 233, 0.74);
+  text-align: center;
+}
+
+.time-value {
+  font-size: 20px;
+  margin-bottom: 2px;
+  font-weight: 600;
+}
+
+.time-prefix {
+  padding-top: 0;
+  font-size: 10px;
+  color: grey;
 }
