--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@
 .menu {
   top: 100px;
   right: 50px;
-  bottom: -60px;
+  bottom: -52px;
   left: -150px;
 }
 
@@ -263,4 +263,36 @@ footer {
 .about .content {
   padding: 50px 600px;
   background-color: #ebf5f5;
+}
+
+.service {
+  text-align: center;
+}
+
+.service .title {
+  padding: 80px;
+  background-color: #eaeaea;
+}
+
+.service .title h1 {
+  color: #ddd;
+  font-size: 80px;
+  font-weight: 800;
+}
+
+.service .content {
+  background-color: #333;
+  padding: 100px 0 200px 0;
+}
+
+.service .content h3 {
+  font-weight: 800;
+  color: white;
+}
+
+.service .content p {
+  padding: 30px 650px;
+  font-weight: 100;
+  color: rgba(255, 255, 255, 0.5);
+  line-height: 1.6;
 }
